labs/27-Network_policies/one_pod_per_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    name: ns1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns1
  name: nginx-deployment-1
  labels:
    app: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-1
  namespace: ns1
spec:
  type: ClusterIP
  ports:
    - name: http
      # The port that will be exposed by this service.
      port: 80
      # Number or name of the port to access on the pods targeted by the service
      targetPort: 80
  selector:
    app: nginx-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    name: ns2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns2
  name: nginx-deployment-2
  labels:
    app: nginx-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-2
  namespace: ns2
spec:
  type: ClusterIP
  ports:
    - name: http
      # The port that will be exposed by this service.
      port: 80
      # Number or name of the port to access on the pods targeted by the service
      targetPort: 80
  selector:
    app: nginx-2
